cfdsa-master/bgg/practice/bgg_app_deploy_v2.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: bgg-app-deployment-v2
  namespace: workshop02

spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: bgg-app-pod
      app.kubernetes.io/version: "v2"

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      name: bgg-app-pod
      labels:
        app.kubernetes.io/name: bgg-app-pod
        app.kubernetes.io/version: "v2"

    spec:
      containers:
        - name: bgg-app-container
          image: stackupiss/bgg-app:v2
          imagePullPolicy: Always
          ports:
            - name: bgg-app-port
              containerPort: 3000
---
apiVersion: v1
kind: Service

metadata:
  name: bgg-app-svc-v2
  namespace: workshop02
  labels:
      name: bgg-app-svc-v2

spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: bgg-app-pod
    app.kubernetes.io/version: "v2"
  ports:
    - name: bgg-app-svc-port
      port: 8080
      targetPort: bgg-app-port
